fixed issue where ie was displaying images stretched with object-fit: contain

--- a/resources/scss/ceres/plugins/_owl-carousel.scss
+++ b/resources/scss/ceres/plugins/_owl-carousel.scss
@@ -443,3 +443,33 @@ Custom classes
     height: 700px;
   }
 }
+
+/* Compatibility for IE */
+html.ie {
+  // set width to maximal available size
+  #single-carousel .owl-item img {
+    width: auto;
+    display: inline-block;
+  }
+  // align image center
+  #single-carousel .owl-item > div {
+    text-align: center;
+  }
+
+  // prevent wrap
+  #thumb-carousel .owl-stage {
+    display: flex;
+    
+    // thumb-image takes assigned height of parent and displays optimal width
+    .owl-item {
+      width: auto !important;
+
+      img {
+        width: auto;
+        margin-right: 0 !important;
+      }
+    }
+  }
+}
+
+
